[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
name = "bootinfo"
version = "0.1.0"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/jcreekmore/bootinfo"
description = "A tool for displaying boot info from a binary such as a Multiboot-compliant file."
categories = ["development-tools"]

[badges]
travis-ci = { repository = "jcreekmore/bootinfo" }

[dependencies]
bitflags = "1.0.1"
bytes = "0.4.6"
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
flate2 = "1.0.1"
structopt = "0.1.6"
structopt-derive = "0.1.6"
