[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
categories = ["development-tools"]
description = "A tool for displaying boot info from a binary such as a Multiboot-compliant file."
license = "Apache-2.0/MIT"
name = "bootinfo"
readme = "README.md"
repository = "https://github.com/jcreekmore/bootinfo"
version = "0.2.1-pre"

[badges.travis-ci]
repository = "jcreekmore/bootinfo"

[dependencies]
bitflags = "1.0.1"
bytes = "0.4.6"
clap = "2.29.2"
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
flate2 = "1.0.1"
lazy_static = "1.0.0"
